<resources>
    <string name="app_name">Electrolinera</string>

    <!--Cadenas para la Pantalla de Iniciar Sesion -->
    <string name="UsuarioLogin">Correo</string>
    <string name="ContraseniaLogin">Contraseña</string>
    <string name="RecuperarContraseniaLogin">¿Has olvidado tu contraseña?</string>
    <string name="IniciarSesion">Iniciar Sesión</string>
    <string name="RegistroLogin">Regístrate</string>

    <!--Cadenas para la Pantalla de Registro-->
    <string name="NombreUsuario">Nombre</string>
    <string name="ApellidoPaterno">Apellido Paterno</string>
    <string name="ApellidoMaterno">Apellido Materno</string>
    <string name="CorreoRegistro">Correo</string>
    <string name="ContraseniaRegistro">Contraseña</string>
    <string name="RepetirContraseniaRegistro">Repetir contraseña</string>
    <string name="FechaNacimientoRegistro">Fecha de nacimiento</string>
    <string name="GeneroRegistro">Género</string>
    <string name="EstadoRegistro">Estado</string>
    <string name="btnRegistrarme">Registrarme</string>

    <!--Cadenas para la Pantallas de Ver perfil -->
    <string name="btnModificarPerfil">Modificar</string>
    <string name="btnModificarContrasenia">Modificar contraseña</string>
    <string name="btnAgregarAuto">Agregar automóvil</string>

    <!--Cadenas para la Pantalla de Recuperar contraseña-->
    <string name="ContraseniaAnterior">Contraseña anterior</string>
    <string name="ContraseniaNueva">Contraseña nueva</string>
    <string name="RepetirContraseniaNueva">Repita su contraseña</string>
    <string name="GuardarCambios">Guardar cambios</string>

    <!--Cadenas para la Pantalla Agregar Automóvil-->
    <string name="Anio">Año</string>
    <string name="Modelo">Modelo</string>
    <string name="TipoAuto">Tipo del Auto</string>
    <string name="Marca">Marca</string>
    <string name="Agregar">Agregar</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_iniciar_sesion">IniciarSesion</string>
    <string name="title_activity_registro">Registro</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_recuperar_contrasenia">RecuperarContrasenia</string>
    <string name="title_activity_ver_perfil">VerPerfil</string>
    <string name="title_activity_modificar_perfil">ModificarPerfil</string>
    <string name="title_activity_cambiar_contrasena">CambiarContrasena</string>
    <string name="title_activity_agregar_automovil">AgregarAutomovil</string>
    <string name="title_activity_ver_automovil">VerAutomovil</string>
</resources>
