<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.pedronoriega.electrolinera.Registro">

    <EditText
        android:hint="@string/NombreUsuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"/>

    <EditText
        android:hint="@string/ApellidoPaterno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etApellidoPaterno"/>

    <EditText
        android:hint="@string/ApellidoMaterno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etApellidoMaterno"/>

    <EditText
        android:hint="@string/CorreoRegistro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCorreo"/>

    <EditText
        android:hint="@string/ContraseniaRegistro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etContrasenia"/>

    <EditText
        android:hint="@string/RepetirContraseniaRegistro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRepetirContrasenia"/>

    <EditText
        android:hint="@string/FechaNacimientoRegistro"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/etFechaNacimiento"/>

    <EditText
        android:hint="@string/GeneroRegistro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etGenero"/>

    <EditText
        android:hint="@string/EstadoRegistro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEstado"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Registrarme"
        android:id="@+id/btnRegistrarme" />

</LinearLayout>
