<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.pedronoriega.electrolinera.ModificarPerfil">

    <EditText
        android:hint="@string/NombreUsuario"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNombre"/>

    <EditText
        android:hint="@string/ApellidoPaterno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etApellidoPaterno"/>

    <EditText
        android:hint="@string/ApellidoMaterno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etApellidoMaterno"/>

    <EditText
        android:text="@string/GeneroRegistro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etGenero"/>

    <EditText
        android:text="@string/FechaNacimientoRegistro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEdad"/>

    <EditText
        android:hint="@string/EstadoRegistro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEstado"/>
</LinearLayout>
