<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.pedronoriega.electrolinera.AgregarAutomovil">

    <EditText
        android:hint="@string/Anio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAnio"/>

    <EditText
        android:hint="@string/Modelo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etModelo"/>

    <EditText
        android:hint="@string/TipoAuto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTipoAuto"/>

    <EditText
        android:hint="@string/Marca"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMarca"/>

    <Button
        android:text="@string/Agregar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAgregarAuto"/>

</LinearLayout>
