<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.pedronoriega.electrolinera.CambiarContrasena">

    <EditText
        android:hint="@string/ContraseniaAnterior"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etContraseniaAnterior"
        android:inputType="textPassword"
        />

    <EditText
        android:hint="@string/ContraseniaNueva"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etContraseniaNueva"
        android:inputType="textPassword"
        />

    <EditText
        android:hint="@string/RepetirContraseniaNueva"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRepetirContrasenia"
        android:inputType="textPassword"
        />

    <Button
        android:text="@string/GuardarCambios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCambiarContrasenia"/>

</LinearLayout>
