<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.pedronoriega.electrolinera.IniciarSesion">

    <EditText
        android:text="@string/UsuarioLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCorreo"
        android:gravity="center"
        android:singleLine="true"
        android:inputType="text"
        />

    <EditText
        android:text="@string/ContraseniaLogin"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etContrasenia"
        android:gravity="center"
        android:singleLine="true"
        android:inputType="text"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/btnIniciarSesion"
        android:text="@string/IniciarSesion"
        />

</LinearLayout>
